--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-youtube": "^9.0.3"
+    "react-youtube": "^9.0.3",
+    "recoil": "^0.7.5"
   },
   "devDependencies": {
     "@types/node": "18.7.6",
